Add files via upload
Peaaegu lõplik versioon mängust. Teen veel paar parandust.